--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
+    "sharp": "^0.29.3",
     "validator": "^10.9.0"
   },
   "devDependencies": {
